# VINS-Fusion

camera_models/: CMakeLists.txt
config/: Dependencies.cmake
config/scube/: scube_cam0_pinhole.yaml  scube_cam1_pinhole.yaml  scube_stereo_config.yaml  scube_stereo_imu_config.yaml
global_fusion/: CMakeLists.txt
global_fusion/src/: globalOptNode.cpp
loop_fusion/: CMakeLists.txt
loop_fusion/src/: pose_graph.cpp
vins_estimator/: CMakeLists.txt
vins_estimator/src/utility/: visualization.cpp
